# skills-claudecode-glasscode

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SKILL.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
glasscode/: __init__.py  __main__.py  cli.py  errors.py  factory.py  models.py  service.py  sources.py
glasscode/parsing/: __init__.py  base.py  semgrep.py
glasscode/rendering/: __init__.py  base.py  json_report.py  rich_console.py
glasscode/scoring/: __init__.py  base.py  strategies.py
scripts/: render_report.py
tests/: conftest.py  test_cli.py  test_parsing.py  test_scoring.py  test_service.py
